# quadlib

./: CMakeLists.txt
include/: exceptions.h  point.h  quadrature.h
source/: point.cc  quadrature.cc
test/: CMakeLists.txt  point_1.cc  quadrature_test.cc
